--- a/requirements.txt
+++ b/requirements.txt
@@ -18,6 +18,7 @@ cycler==0.12.1
 debugpy==1.8.5
 decorator==5.1.1
 defusedxml==0.7.1
+et-xmlfile==1.1.0
 exceptiongroup==1.2.2
 executing==2.0.1
 fastjsonschema==2.20.0
@@ -48,6 +49,7 @@ jupyterlab==4.2.4
 jupyterlab_pygments==0.3.0
 jupyterlab_server==2.27.3
 kiwisolver==1.4.5
+latexcodec==3.0.0
 MarkupSafe==2.1.5
 matplotlib==3.9.2
 matplotlib-inline==0.1.7
@@ -58,11 +60,13 @@ nbformat==5.10.4
 nest-asyncio==1.6.0
 notebook_shim==0.2.4
 numpy==2.0.1
+openpyxl==3.1.5
 overrides==7.7.0
 packaging==24.1
 pandas==2.2.2
 pandocfilters==1.5.1
 parso==0.8.4
+patsy==0.5.6
 pexpect==4.9.0
 pillow==10.4.0
 platformdirs==4.2.2
@@ -85,12 +89,14 @@ requests==2.32.3
 rfc3339-validator==0.1.4
 rfc3986-validator==0.1.1
 rpds-py==0.20.0
+scipy==1.13.1
 seaborn==0.13.2
 Send2Trash==1.8.3
 six==1.16.0
 sniffio==1.3.1
 soupsieve==2.5
 stack-data==0.6.3
+statsmodels==0.14.2
 tenacity==9.0.0
 terminado==0.18.1
 tinycss2==1.3.0
