--- a/requirements.txt
+++ b/requirements.txt
@@ -1,37 +1,53 @@
+alabaster==0.7.16
 anyio==4.4.0
+anywidget==0.9.15
+appdirs==1.4.4
 appnope==0.1.4
 argon2-cffi==23.1.0
 argon2-cffi-bindings==21.2.0
 arrow==1.3.0
+asgiref==3.8.1
 asttokens==2.4.1
 async-lru==2.0.4
 attrs==24.2.0
 babel==2.16.0
 beautifulsoup4==4.12.3
+bibtexparser==1.4.3
 bleach==6.1.0
 certifi==2024.7.4
 cffi==1.17.0
 charset-normalizer==3.3.2
+click==8.1.8
 comm==0.2.2
 contourpy==1.2.1
 cycler==0.12.1
 debugpy==1.8.5
 decorator==5.1.1
 defusedxml==0.7.1
+Deprecated==1.2.18
+diskcache==5.6.3
+docutils==0.21.2
 et-xmlfile==1.1.0
 exceptiongroup==1.2.2
 executing==2.0.1
+faicons==0.2.2
+fake-useragent==2.0.3
 fastjsonschema==2.20.0
 fonttools==4.53.1
 fqdn==1.5.1
+free-proxy==1.1.3
+graphviz==0.20.3
 h11==0.14.0
+htmltools==0.6.0
 httpcore==1.0.5
 httpx==0.27.0
 idna==3.7
+imagesize==1.4.1
 importlib_metadata==8.2.0
 importlib_resources==6.4.0
 ipykernel==6.29.5
 ipython==8.18.1
+ipywidgets==8.1.3
 isoduration==20.11.0
 jedi==0.19.1
 Jinja2==3.1.4
@@ -39,6 +55,8 @@ json5==0.9.25
 jsonpointer==3.0.0
 jsonschema==4.23.0
 jsonschema-specifications==2023.12.1
+jupyter==1.1.1
+jupyter-console==6.6.3
 jupyter-events==0.10.0
 jupyter-lsp==2.2.5
 jupyter_client==8.6.2
@@ -48,19 +66,31 @@ jupyter_server_terminals==0.5.3
 jupyterlab==4.2.4
 jupyterlab_pygments==0.3.0
 jupyterlab_server==2.27.3
+jupyterlab_widgets==3.0.11
 kiwisolver==1.4.5
 latexcodec==3.0.0
+linkify-it-py==2.0.3
+llama_cpp_python==0.2.88
+lxml==5.3.1
+markdown-it-py==3.0.0
 MarkupSafe==2.1.5
 matplotlib==3.9.2
 matplotlib-inline==0.1.7
+mdit-py-plugins==0.4.2
+mdurl==0.1.2
 mistune==3.0.2
+narwhals==1.30.0
 nbclient==0.10.0
 nbconvert==7.16.4
 nbformat==5.10.4
 nest-asyncio==1.6.0
+networkx==3.2.1
+notebook==7.3.2
 notebook_shim==0.2.4
 numpy==2.0.1
 openpyxl==3.1.5
+orjson==3.10.15
+outcome==1.3.0.post0
 overrides==7.7.0
 packaging==24.1
 pandas==2.2.2
@@ -74,28 +104,51 @@ plotly==5.23.0
 prometheus_client==0.20.0
 prompt_toolkit==3.0.47
 psutil==6.0.0
+psygnal==0.12.0
 ptyprocess==0.7.0
 pure_eval==0.2.3
 pycparser==2.22
+pydot==3.0.4
 Pygments==2.18.0
 pyparsing==3.1.2
+pySankey==0.0.1
+PySocks==1.7.1
 python-dateutil==2.9.0.post0
+python-dotenv==1.0.1
 python-json-logger==2.0.7
+python-multipart==0.0.20
 pytz==2024.1
 PyYAML==6.0.2
 pyzmq==26.1.0
+questionary==2.1.0
 referencing==0.35.1
 requests==2.32.3
 rfc3339-validator==0.1.4
 rfc3986-validator==0.1.1
 rpds-py==0.20.0
+scholarly==1.7.11
 scipy==1.13.1
 seaborn==0.13.2
+selenium==4.29.0
 Send2Trash==1.8.3
+shiny==1.3.0
+shinywidgets==0.5.1
 six==1.16.0
 sniffio==1.3.1
+snowballstemmer==2.2.0
+sortedcontainers==2.4.0
 soupsieve==2.5
+Sphinx==7.4.7
+sphinx-rtd-theme==3.0.2
+sphinxcontrib-applehelp==2.0.0
+sphinxcontrib-devhelp==2.0.0
+sphinxcontrib-htmlhelp==2.1.0
+sphinxcontrib-jquery==4.1
+sphinxcontrib-jsmath==1.0.1
+sphinxcontrib-qthelp==2.0.0
+sphinxcontrib-serializinghtml==2.0.0
 stack-data==0.6.3
+starlette==0.46.1
 statsmodels==0.14.2
 tenacity==9.0.0
 terminado==0.18.1
@@ -103,13 +156,23 @@ tinycss2==1.3.0
 tomli==2.0.1
 tornado==6.4.1
 traitlets==5.14.3
+trio==0.29.0
+trio-websocket==0.12.2
 types-python-dateutil==2.9.0.20240316
 typing_extensions==4.12.2
 tzdata==2024.1
+uc-micro-py==1.0.3
 uri-template==1.3.0
 urllib3==2.2.2
+uvicorn==0.34.0
+watchfiles==1.0.4
 wcwidth==0.2.13
 webcolors==24.8.0
 webencodings==0.5.1
 websocket-client==1.8.0
+websockets==15.0.1
+widgetsnbextension==4.0.11
+wordcloud==1.9.3
+wrapt==1.17.2
+wsproto==1.2.0
 zipp==3.20.0
