--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,10 @@
-demetra_venv
+.venv_demetra
 .DS_store
 __pycache__/
-.ipynb_checkpoints/
+
 ../.idea/
 .idea/
-assets/Embase 12 ontbrekende 20240919.ris
+
+definitions/__marimo__/
+static_output/__marimo__/
+# assets/Embase 12 ontbrekende 20240919.ris
