update figures and cleaning count

--- a/.gitignore
+++ b/.gitignore
@@ -7,4 +7,5 @@ __pycache__/
 
 definitions/__marimo__/
 static_output/__marimo__/
+static_output/Figure*
 # assets/Embase 12 ontbrekende 20240919.ris
